# TaiL

./: .envrc  .gitignore  Cargo.toml  DEVELOPMENT_SUMMARY.md  Dockerfile  LICENSE  NIXOS_INSTALL.md  README.md  RUNNING_GUIDE.md  SERVICE_GUIDE.md  flake.nix  install-nixos.sh  justfile  shell.nix
.github/workflows/: ci.yml
docs/: NIXOS_MODULE_FIX.md  QUICK_START.md  index.md  tai分析文档.md  tai前端分析.md
docs/developer/: architecture.md  ci-cd.md  contributing.md  development.md  index.md  testing.md
docs/reference/: database-schema.md
docs/user/: configuration.md  index.md  installation.md  quick-start.md  troubleshooting.md  usage.md
nix/: module.nix  tail-service.service
plans/: app-categories-feature.md  architecture-clarification.md  architecture-summary.md  category-view-improvements.md  hierarchical-chart-refactor.md  icon-display-fix.md  navigation-ui-improvements.md  statistics-category-view.md  testing-and-ci-architecture.md  ui-redesign-plan.md
tail-afk/: Cargo.toml
tail-afk/src/: detector.rs  lib.rs
tail-app/: Cargo.toml
tail-app/src/: main.rs  service.rs
tail-core/: Cargo.toml
tail-core/src/: db.rs  errors.rs  lib.rs  logging.rs  models.rs  time.rs  traits.rs  utils.rs
tail-core/src/application/: adapter.rs  converters.rs  mod.rs  ports.rs  use_cases.rs
tail-core/src/db/: pool.rs  sqlite_event_repo.rs
tail-core/src/db/queries/: app_usage.rs  category_usage.rs  mod.rs  time_stats.rs
tail-core/src/db/repositories/: afk_event.rs  alias.rs  category.rs  daily_goal.rs  mod.rs  window_event.rs
tail-core/src/domain/: aggregation.rs  errors.rs  mod.rs  navigation.rs  time_event.rs
tail-core/src/services/: category_service.rs  goal_service.rs  mod.rs  usage_service.rs
tail-core/src/time/: aggregate.rs  format.rs  range.rs  types.rs
tail-gui/: Cargo.toml
tail-gui/assets/: tail.desktop
tail-gui/src/: app.rs  async_bridge.rs  fonts.rs  lib.rs  theme.rs  utils.rs  views.rs
tail-gui/src/components/: alias_dialog.rs  app_card.rs  header.rs  hierarchical_chart.rs  mod.rs  navigation.rs  progress.rs  sidebar.rs  stacked_bar_chart.rs  styles.rs  time_navigation.rs  time_selector.rs  top_tab.rs
tail-gui/src/components/chart/: chart_data.rs  mod.rs  stacked_bar_chart.rs
tail-gui/src/icons/: cache.rs  mod.rs  ui_icons.rs
tail-gui/src/services/: cache_service.rs  data_service.rs  mod.rs
tail-gui/src/store/: app_store.rs  category_store.rs  dashboard_store.rs  mod.rs  stats_store.rs
tail-gui/src/views/: aggregation.rs  categories.rs  dashboard.rs  details.rs  mod.rs  settings.rs  statistics.rs
tail-hyprland/: Cargo.toml
tail-hyprland/src/: ipc.rs  lib.rs
tail-service/: Cargo.toml
tail-service/src/: lib.rs  service.rs
tests/: Cargo.toml
tests/integration/: db_integration_test.rs
