[package]
name = "tail-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { workspace = true }
egui = { workspace = true }
egui_extras = { workspace = true, features = ["image"] }
egui_plot = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dark-light = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
unix_socket = { workspace = true }
image = { workspace = true }
tail-core = { path = "../tail-core" }
