[package]
name = "tail-service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
tail-core = { path = "../tail-core" }
tail-hyprland = { path = "../tail-hyprland" }
tail-afk = { path = "../tail-afk" }
